<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="amount_Text_Field_hint">50.0</string>
    <string name="ten_button_title">10%</string>
    <string name="fifteen_button_title">15%</string>
    <string name="twenty_button_title">20%</string>
    <string name="result_Text_View_hint">Tip is: 7.5</string>
    <string name="numberInParty">Number of Guests</string>

</resources>
