<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnTenPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvComputedTip"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/btnFifteenPercent"
        android:onClick="computeTip"
        android:text="@string/ten_button_title" />

    <Button
        android:id="@+id/btnTwentyPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvComputedTip"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/btnFifteenPercent"
        android:onClick="computeTip"
        android:text="@string/twenty_button_title" />

    <EditText
        android:id="@+id/tvEnterAmmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/amount_Text_Field_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvComputedTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFifteenPercent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:hint="@string/result_Text_View_hint"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnFifteenPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEnterAmmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:onClick="computeTip"
        android:text="@string/fifteen_button_title" />

    <EditText
        android:id="@+id/etPartyCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEnterAmmount"
        android:layout_below="@+id/tvComputedTip"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/numberInParty"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvSplitTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPartyCount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="Large Text"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
